--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "tslib": "^2.6.2",
     "typescript": "^5.2.2",
     "vite": "^5.0.12",
-	"svelte-sound": "*"
+	"svelte-sound": "*",
+	"lodash": "*",
+	"@types/lodash": "*"
   }
 }
